# churros-online-calendar

./: .gitignore  .gitlab-ci.yml  README.md  churros_online_calendar.opam  dune-project  flake.nix
lib/: dune  lexer.ml  lexer.mli  lexer.mll  syntax.ml
lib/calendar/: calendar.ml  dune
lib/crypto_rng_uid/: crypto_rng_uid.ml  dune
lib/http/: dune  http.ml  http.mli
lib/ics/: dune  ics.ml
lib/json/: dune  lexer.ml  parser.mly
lib/persistence/: dune  persistence.ml  persistence.mli  queries.ml
public/: index.html
test/: dune
